methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:18: error: type mismatch;
 found   : Unit
 required: Boolean
  gauche()
        ^